Add CSS variables

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -16,7 +16,9 @@
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
+    --accent: 32 100% 55%;
+    --accent-gradient-to: 4 86% 46%;
+    --accent-gradient-to-light: 12 87% 51%;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
